[package]
name = "anthropic-worker-proxy"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
workers-macros = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
